--- a/Nodes/node-red-contrib-my-device/nodes/create-device.html
+++ b/Nodes/node-red-contrib-my-device/nodes/create-device.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
-    RED.nodes.registerType('create-device',{
-        category: 'Virtual_IoT_Device',
+    RED.nodes.registerType('Create Device',{
+        category: 'My Virtual Device',
         color: '#a6bbcf',
         defaults: {
             name: {value:""}
@@ -9,18 +9,18 @@
         outputs:1,
         icon: "vdStop.png",
         label: function() {
-            return this.name||"create-device";
+            return this.name||"Create Device";
         }
     });
 </script>
 
-<script type="text/html" data-template-name="create-device">
+<script type="text/html" data-template-name="Create Device">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
 </script>
 
-<script type="text/html" data-help-name="create-device">
+<script type="text/html" data-help-name="Create Device">
     <p>A simple node that converts the message payloads into all lower-case characters</p>
 </script>
